--- a/Huimitu/src/resources/views/products/details.hbs
+++ b/Huimitu/src/resources/views/products/details.hbs
@@ -46,7 +46,7 @@
 	                            <label class="col-xl-7 col-lg-5 col-md-6 col-6"><strong>Status</strong></label>
 	                            <div class="col-xl-5 col-lg-5 col-md-6 col-6">
 	                                <div class="form-group ">
-	                                        <input  class="" value="{{product.status}}" ></input> 
+	                                        <input  class="" value="{{product.status}}"  readonly> 
 	                                </div>
 	                            </div>
 	                        </div>
@@ -54,7 +54,7 @@
 	                            <label class="col-xl-7 col-lg-5  col-md-6 col-6"><strong>Quantity</strong></label>
 	                            <div class="col-xl-5 col-lg-5 col-md-6 col-6">
 	                                <div class="form-group">
-	                                    <input type="text" value="{{product.qty}}"  class="">
+	                                    <input type="text"  value="{{product.qty}}"  class="" readonly>
 	                                </div>
 	                            </div>
 	                        </div>
@@ -62,7 +62,7 @@
 	                            <label class="col-xl-7 col-lg-5 col-md-6 col-6"><strong>Price</strong></label>
 									<div class="col-xl-5 col-lg-5 col-md-6 col-6">
 										<div class="form-group ">
-												<input  type="text" class="" value="{{product.price}}" ></input> 
+												<input  type="text" class="" value="{{product.price}}" readonly></input> 
 										</div>
 									</div>
 	                        </div>
@@ -70,7 +70,7 @@
 	                            <label class="col-xl-7 col-lg-5 col-md-6 col-6"><strong>Discount</strong></label>
 									<div class="col-xl-5 col-lg-5 col-md-6 col-6">
 										<div class="form-group ">
-												<input  type="text" class="" value="{{product.discount}}" ></input> 
+												<input  type="text" class="" value="{{product.discount}}" readonly></input> 
 										</div>
 									</div>
 	                        </div>
