--- a/Huimitu/src/resources/views/home.hbs
+++ b/Huimitu/src/resources/views/home.hbs
@@ -171,7 +171,7 @@
        
         <div class="grid_item">
           <figure>
-            <span class="ribbon off">-30%</span>
+            <span class="ribbon off">{{discount}}.00%</span>
             <a href="/products/details/{{slug}}">
               <img
                 class="img-fluid lazy"
@@ -179,18 +179,18 @@
                 alt=""
               >
             </a>
-            <div data-countdown="2019/05/15" class="countdown"></div>
+            {{!-- <div data-countdown="2019/05/15" class="countdown"></div> --}}
           </figure>
           <div class="rating"><i class="icon-star voted"></i><i
               class="icon-star voted"
             ></i><i class="icon-star voted"></i><i
               class="icon-star voted"
             ></i><i class="icon-star"></i></div>
-          <a href="product-detail-1.html">
+          <a href="/products/details/{{slug}}">
             <h3>{{name}}</h3>
           </a>
           <div class="price_box">
-            <span class="new_price">{{price}}</span>
+            <span class="new_price">{{price}}đ</span>
             {{!-- <span class="old_price">$60.00</span> --}}
           </div>
           <ul>
