--- a/Huimitu/src/resources/views/partials/header.hbs
+++ b/Huimitu/src/resources/views/partials/header.hbs
@@ -1,17 +1,21 @@
 <header class="version_1">
   <div class="layer"></div><!-- Mobile menu overlay mask -->
-  {{!-- <div class="main_header">
+  <div class="main_header">
     <div class="container p-2">
       <div class="row small-gutters">
         <div class="col-xl-3 col-lg-3 d-lg-flex align-items-center">
           <div id="logo">
             <a href="/"><img
-                src="/img/logo.svg"
+                src="/img/aaijd-8txsb.svg"
                 alt=""
                 width="100"
                 height="35"
-              /></a>
+                
+              />
+              
+              </a>
           </div>
+          <h3>HUIMITU</h3>
         </div>
         <nav class="col-xl-6 col-lg-7">
           <a class="open_close" href="javascript:void(0);">
@@ -22,7 +26,7 @@
             </div>
           </a>
           <!-- Mobile menu button -->
-          <div class="main-menu">
+          {{!-- <div class="main-menu">
             <div id="header_menu">
               <a href="index.html"><img
                   src="/img/logo_black.svg"
@@ -34,13 +38,13 @@
                   class="ti-close"
                 ></i></a>
             </div>
-          </div>
+          </div> --}}
           <!--/main-menu -->
         </nav>
       </div>
       <!-- /row -->
     </div>
-  </div> --}}
+  </div>
   <!-- /main_header -->
 
   <div class="main_nav Sticky">
