Update homepage FE
Fix Frontend Home page

--- a/Huimitu/src/resources/views/home.hbs
+++ b/Huimitu/src/resources/views/home.hbs
@@ -104,12 +104,12 @@
   </div>
   <!--/carousel-->
 
-  {{!-- <ul id="banners_grid" class="clearfix">
+  <ul id="banners_grid" class="clearfix">
     <li>
-      <a href="#0" class="img_container">
+      <a href="/products" class="img_container">
         <img
           src="upload\1650648899495-xeABC.jpg"
-          data-src="img/banner_1.jpg"
+          data-src="img/phu-kien-dien-thoai-nguoi-ban-dong-hanh-khong-the-thieu1.png"
           alt=""
           class="lazy"
         />
@@ -117,16 +117,16 @@
           class="short_info opacity-mask"
           data-opacity-mask="rgba(0, 0, 0, 0.5)"
         >
-          <h3>Men's Collection</h3>
+          <h3>Cáp sạc</h3>
           <div><span class="btn_1">Shop Now</span></div>
         </div>
       </a>
     </li>
     <li>
-      <a href="#0" class="img_container">
+      <a href="/products " class="img_container">
         <img
           src="img/banners_cat_placeholder.jpg"
-          data-src="img/banner_2.jpg"
+          data-src="img/kinh-doanh-phu-kien-dien-thoai-lay-hang-o-dau-min.jpg"
           alt=""
           class="lazy"
         />
@@ -134,16 +134,16 @@
           class="short_info opacity-mask"
           data-opacity-mask="rgba(0, 0, 0, 0.5)"
         >
-          <h3>Womens's Collection</h3>
+          <h3>Ốp lưng</h3>
           <div><span class="btn_1">Shop Now</span></div>
         </div>
       </a>
     </li>
     <li>
-      <a href="#0" class="img_container">
+      <a href="/products" class="img_container">
         <img
           src="upload\1650648899495-xeABC.jpg"
-          data-src="img/banner_3.jpg"
+          data-src="img/tong-hop-dia-chi-ban-phu-kien-dien-thoai-gia-si-tphcm-ha-noi-can-tho.jpg"
           alt=""
           class="lazy"
         />
@@ -151,12 +151,12 @@
           class="short_info opacity-mask"
           data-opacity-mask="rgba(0, 0, 0, 0.5)"
         >
-          <h3>Kids's Collection</h3>
+          <h3>Tổng hợp</h3>
           <div><span class="btn_1">Shop Now</span></div>
         </div>
       </a>
     </li>
-  </ul> --}}
+  </ul>
   <!--/banners_grid -->
 
   <div class="container margin_60_35">
