--- a/Huimitu/src/resources/views/products/products.hbs
+++ b/Huimitu/src/resources/views/products/products.hbs
@@ -95,7 +95,7 @@
                                 </li>
                                 <li>
                                     <label class="container_check">Thailand <small></small>
-                                        <input type="checkbox" name="filtering" value="Nhật bản">
+                                        <input type="checkbox" name="filtering" value="Thailand">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
