Update features pagination
fix bugs pagination for products lists in User site

--- a/Huimitu/src/resources/views/products/products.hbs
+++ b/Huimitu/src/resources/views/products/products.hbs
@@ -178,18 +178,18 @@
                     <ul class="pagination">
                         <li><a href="#0" class="prev" title="previous page">&#10094;</a></li>
                         <li>
-                            <a href="#0">1</a>
+                            <a href="products?page=1" type="submit" name="page">1</a>
                         </li>
                         <li>
-                            <a href="#0" >2</a>
+                            <a href="products?page=2" >2</a>
                         </li>
                         <li>
-                            <a href="#0">3</a>
+                            <a href="products?page=3">3</a>
                         </li>
                         <li>
-                            <a href="#0">4</a>
+                            <a href="products?page=4">4</a>
                         </li>
-                        <li><a href="#0" class="next" title="next page">&#10095;</a></li>
+                        <li><a href="products?page=5" class="next" title="next page">&#10095;</a></li>
                     </ul>
                 </form>
             </div>
