Update homepage FE
Update logo and brand of homepage

--- a/Huimitu/src/resources/views/products/products.hbs
+++ b/Huimitu/src/resources/views/products/products.hbs
@@ -23,8 +23,7 @@
                 <li>
                     <form class="" method="get">
                         <div class="mt-0" name="sort" id="sort">
-                            <input class="mt-0" type="radio" name="sort" value="createdAt"  selected="selected">Sort createAt</input>
-                            <input class="mt-0" type="radio" name="sort" value="price">Sort by price</input>
+                            <input class="mt-0" type="radio" name="sort" value="createdAt"  selected="selected">Sort by createAt</input>
                             <button type="submit" class="btn btn-primary btn-sm" id="btnsort" >Sort</button>
                         </div>
                     </form>
@@ -39,8 +38,8 @@
                 <form class="filter_col" method="get">
                     <div class="inner_bt"><a href="#" class="open_filters"><i class="ti-close"></i></a></div>
                     <div class="filter_type version_2">
-                        <h4><a href="#filter_3" data-toggle="collapse" class="opened">Name</a></h4>
-                        <div class="collapse show" id="filter_3">
+                        <h4><a href="#filter_3" data-toggle="collapse" class="opened">Search</a></h4>
+                        <div class="collapse show  custom-search-input" id="filter_3">
                             <input type="text" class="container_check flex" name="search" value="">                                       
                         </div>
                     </div>
