--- a/Huimitu/src/resources/views/layouts/main.hbs
+++ b/Huimitu/src/resources/views/layouts/main.hbs
@@ -23,7 +23,7 @@
     <link href="/css/bootstrap.custom.min.css" rel="stylesheet">
     <link href="/css/style.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Tangerine">
 	<!-- SPECIFIC CSS -->
     <link href="/css/home_1.css" rel="stylesheet">
     <link href="/css/product_page.css" rel="stylesheet">
