--- a/Huimitu/src/resources/views/partials/header.hbs
+++ b/Huimitu/src/resources/views/partials/header.hbs
@@ -6,16 +6,16 @@
         <div class="col-xl-3 col-lg-3 d-lg-flex align-items-center">
           <div id="logo">
             <a href="/"><img
-                src="/img/aaijd-8txsb.svg"
+                src="/img/logo123.svg"
                 alt=""
                 width="100"
-                height="35"
+                height="65"
                 
               />
               
               </a>
           </div>
-          <h3>HUIMITU</h3>
+          <div style="color:rgb(247, 238, 238);  font-size: 40px; font-family:'Tangerine', serif;">Huimitu</div>
         </div>
         <nav class="col-xl-6 col-lg-7">
           <a class="open_close" href="javascript:void(0);">
@@ -144,12 +144,12 @@
           </nav>
         </div>
         <div class="col-xl-6 col-lg-7 col-md-6 d-none d-md-block">
-          <div class="custom-search-input">
-            <input type="text" placeholder="Search over 10.000 products" />
+          {{!-- <div class="custom-search-input">
+            <input type="text" placeholder="Search over 10.000 products"/>
             <button type="submit">
               <i class="header-icon_search_custom"></i>
             </button>
-          </div>
+          </div> --}}
         </div>
         <div class="col-xl-3 col-lg-2 col-md-3">
           <ul class="top_tools">
