Update cart payment
change currency format
fix bugs cart payment stripe

--- a/Huimitu/src/resources/views/home.hbs
+++ b/Huimitu/src/resources/views/home.hbs
@@ -190,7 +190,7 @@
             <h3>{{name}}</h3>
           </a>
           <div class="price_box">
-            <span class="new_price">{{price}}đ</span>
+            <span class="new_price">{{cur price}}</span>
             {{!-- <span class="old_price">$60.00</span> --}}
           </div>
           <ul>
