--- a/Huimitu/src/resources/views/partials/header.hbs
+++ b/Huimitu/src/resources/views/partials/header.hbs
@@ -170,7 +170,7 @@
                             height="50"
                             class="lazy"
                           /></figure>
-                        <strong><span>{{this.item.name}}</span>{{this.price}}</strong>
+                        <strong><span>{{this.item.name}}</span>{{cur this.price}}</strong>
                       </a>
                       <a href="/products/remove/{{this.item._id}}" class="action"><i class="ti-trash"></i></a>
                     </li>
