Add filter features
filter by category and manufacture for customers

--- a/Huimitu/src/resources/views/products/products.hbs
+++ b/Huimitu/src/resources/views/products/products.hbs
@@ -49,31 +49,31 @@
                             <ul>
                                 <li>
                                     <label class="container_check">Cáp sạc<small></small>
-                                        <input type="checkbox" name="filtering" value="Cáp sạc">
+                                        <input type="checkbox" name="filtering_category" value="Cáp sạc">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
                                     <label class="container_check">Dây sạc <small></small>
-                                        <input type="checkbox" name="filtering" value="Dây sạc">
+                                        <input type="checkbox" name="filtering_category" value="Dây sạc">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
                                     <label class="container_check">Pin dự phòng <small></small>
-                                        <input type="checkbox" name="filtering" value="Pin dự phòng">
+                                        <input type="checkbox" name="filtering_category" value="Pin dự phòng">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
                                     <label class="container_check">Tai nghe <small></small>
-                                        <input type="checkbox" name="filtering" value="Tai nghe">
+                                        <input type="checkbox" name="filtering_category" value="Tai nghe">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
                                     <label class="container_check">Loa <small></small>
-                                        <input type="checkbox" name="filtering" value="Loa">
+                                        <input type="checkbox" name="filtering_category" value="Loa">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
@@ -88,13 +88,13 @@
                             <ul>
                                 <li>
                                     <label class="container_check">Vietnam<small></small>
-                                        <input type="checkbox" name="filtering" value="Vietnam">
+                                        <input type="checkbox" name="filtering_country" value="Vietnam">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
                                     <label class="container_check">Thailand <small></small>
-                                        <input type="checkbox" name="filtering" value="Thailand">
+                                        <input type="checkbox" name="filtering_country" value="Thailand">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
@@ -104,7 +104,7 @@
                     <!-- /filter_type -->
                     
                     <!-- /filter_type -->
-                    <div class="filter_type version_2">
+                    {{!-- <div class="filter_type version_2">
                         <h4><a href="#filter_4" data-toggle="collapse" class="closed">Price</a></h4>
                         <div class="collapse" id="filter_4">
                             <ul>
@@ -128,7 +128,7 @@
                                 </li>
                             </ul>
                         </div>
-                    </div>
+                    </div> --}}
                     <!-- /filter_type -->
                     <div class="buttons">
                        <button type="submit" class="btn_1" id="btn" >filter</button> <a href="#0" class="btn_1 gray">Reset</a>
