Add category homepage
add category in homepage for customer

--- a/Huimitu/src/resources/views/home.hbs
+++ b/Huimitu/src/resources/views/home.hbs
@@ -106,7 +106,7 @@
 
   <ul id="banners_grid" class="clearfix">
     <li>
-      <a href="/products" class="img_container">
+      <a href="/products?search=&filtering_category=Cáp+sạc" class="img_container">
         <img
           src="upload\1650648899495-xeABC.jpg"
           data-src="img/phu-kien-dien-thoai-nguoi-ban-dong-hanh-khong-the-thieu1.png"
@@ -123,7 +123,7 @@
       </a>
     </li>
     <li>
-      <a href="/products " class="img_container">
+      <a href="/products?search=&filtering_category=Ốp+lưng " class="img_container">
         <img
           src="img/banners_cat_placeholder.jpg"
           data-src="img/kinh-doanh-phu-kien-dien-thoai-lay-hang-o-dau-min.jpg"
