--- a/Huimitu/src/resources/views/products/products.hbs
+++ b/Huimitu/src/resources/views/products/products.hbs
@@ -54,8 +54,8 @@
                                     </label>
                                 </li>
                                 <li>
-                                    <label class="container_check">Dây sạc <small></small>
-                                        <input type="checkbox" name="filtering_category" value="Dây sạc">
+                                    <label class="container_check">Củ sạc <small></small>
+                                        <input type="checkbox" name="filtering_category" value="Củ sạc">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
@@ -158,7 +158,7 @@
                         </a>
                         <p>{{description}}</p>
                         <div class="price_box">
-                            <span class="new_price">{{price}}</span>
+                            <span class="new_price">{{cur price}}</span>
                             {{!-- <span class="old_price">$60.00</span> --}}
                         </div>
                         <ul>
