--- a/Huimitu/src/resources/views/partials/header.hbs
+++ b/Huimitu/src/resources/views/partials/header.hbs
@@ -15,8 +15,9 @@
               
               </a>
           </div>
-          <div style="color:rgb(247, 238, 238);  font-size: 40px; font-family:'Tangerine', serif;">Huimitu</div>
+          <div style="color:rgb(247, 238, 238);  font-size: 40px; font-family:'Tangerine', serif;">Huimitu</div>         
         </div>
+               
         <nav class="col-xl-6 col-lg-7">
           <a class="open_close" href="javascript:void(0);">
             <div class="hamburger hamburger--spin">
@@ -26,20 +27,61 @@
             </div>
           </a>
           <!-- Mobile menu button -->
-          {{!-- <div class="main-menu">
-            <div id="header_menu">
-              <a href="index.html"><img
-                  src="/img/logo_black.svg"
-                  alt=""
-                  width="100"
-                  height="40"
-                /></a>
-              <a href="#" class="open_close" id="close_in"><i
-                  class="ti-close"
-                ></i></a>
-            </div>
-          </div> --}}
-          <!--/main-menu -->
+						<div class="main-menu">
+							<div id="header_menu">
+								<a href="index.html"><img src="img/logo_black.svg" alt="" width="100" height="35"></a>
+								<a href="#" class="open_close" id="close_in"><i class="ti-close"></i></a>
+							</div>
+							<ul>
+								<li class="submenu">
+									<a href="#" style ="text-decoration: none;">Home</a>
+								</li>
+								<li class="megamenu submenu">
+									<a href="javascript:void(0);" class="show-submenu-mega" style ="text-decoration: none;">Product</a>
+									<div class="menu-wrapper">
+										<div class="row small-gutters">
+											<div class="col-lg-4">
+												<h3>Phone accessories</h3>
+												<ul>
+													<li><a href="#">Phone charger</a></li>
+													<li><a href="#">Charger</a></li>
+													<li><a href="#">Backup charger</a></li>
+													<li><a href="#">Phone case</a></li>
+													<li><a href="#">Phone tempered glass</a></li>
+													<li><a href="#">Phone headset</a></li>
+													<li><a href="#">Phone holder</a></li>
+												</ul>
+											</div>
+											<div class="col-lg-4">
+												<h3>Other pages </h3>
+												<ul>
+													<li><a href="#">Cart Page</a></li>
+													<li><a href="#">Track Order</a></li>
+													<li><a href="help.html">Help Page</a></li>
+												</ul>
+											</div>
+											<div class="col-lg-4 d-xl-block d-lg-block d-md-none d-sm-none d-none">
+												<div class="banner_menu">
+													<a href="#0">
+														<img src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw==" data-src="img/banner_menu.jpg" width="400" height="550" alt="" class="img-fluid lazy">
+													</a>
+												</div>
+											</div>
+										</div>
+										<!-- /row -->
+									</div>
+									<!-- /menu-wrapper -->
+								</li>
+								<li class="submenu">
+									<a href="javascript:void(0);" class="show-submenu" style ="text-decoration: none;">Support</a>
+									<ul>									
+										<li><a href="#">Contact Us</a></li>
+										<li><a href="#">About us</a></li>
+									</ul>
+								</li>				
+							</ul>
+						</div>
+						<!--/main-menu -->
         </nav>
       </div>
       <!-- /row -->
