--- a/Huimitu/src/resources/views/products/products.hbs
+++ b/Huimitu/src/resources/views/products/products.hbs
@@ -48,31 +48,31 @@
                         <div class="collapse show" id="filter_1">
                             <ul>
                                 <li>
-                                    <label class="container_check">Cáp sạc<small></small>
+                                    <label class="container_check" style="padding-left:30px;">Cáp sạc<small></small>
                                         <input type="checkbox" name="filtering_category" value="Cáp sạc">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
-                                    <label class="container_check">Củ sạc <small></small>
+                                    <label class="container_check" style="padding-left:30px;">Củ sạc <small></small>
                                         <input type="checkbox" name="filtering_category" value="Củ sạc">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
-                                    <label class="container_check">Pin dự phòng <small></small>
+                                    <label class="container_check" style="padding-left:30px;">Pin dự phòng <small></small>
                                         <input type="checkbox" name="filtering_category" value="Pin dự phòng">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
-                                    <label class="container_check">Tai nghe <small></small>
+                                    <label class="container_check" style="padding-left:30px;">Tai nghe <small></small>
                                         <input type="checkbox" name="filtering_category" value="Tai nghe">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
-                                    <label class="container_check">Loa <small></small>
+                                    <label class="container_check" style="padding-left:30px;">Loa <small></small>
                                         <input type="checkbox" name="filtering_category" value="Loa">
                                         <span class="checkmark"></span>
                                     </label>
@@ -87,13 +87,13 @@
                         <div class="collapse show" id="filter_2">
                             <ul>
                                 <li>
-                                    <label class="container_check">Vietnam<small></small>
+                                    <label class="container_check" style="padding-left:30px;">Vietnam<small></small>
                                         <input type="checkbox" name="filtering_country" value="Vietnam">
                                         <span class="checkmark"></span>
                                     </label>
                                 </li>
                                 <li>
-                                    <label class="container_check">Thailand <small></small>
+                                    <label class="container_check" style="padding-left:30px;">Thailand <small></small>
                                         <input type="checkbox" name="filtering_country" value="Thailand">
                                         <span class="checkmark"></span>
                                     </label>
