--- a/Huimitu/src/resources/views/home.hbs
+++ b/Huimitu/src/resources/views/home.hbs
@@ -208,8 +208,8 @@
       </div>
       {{/each}}
       <div class="container margin_60_35">
-        <form id="demo" class="pagination__wrapper " method="get">
-          <ul class="pagination">
+        <form id="demo" class="pagination__wrapper" method="get">
+          <ul class="pagination" style="margin-left:220px; ">
             <li><a href="#0" class="prev" title="previous page">&#10094;</a></li>
             <li>
               <a href="?page=1" type="submit" name="page">1</a>
