--- a/Huimitu/src/resources/views/partials/header.hbs
+++ b/Huimitu/src/resources/views/partials/header.hbs
@@ -37,7 +37,7 @@
 									<a href="/" style ="text-decoration: none;">Home</a>
 								</li>
 								<li class="megamenu submenu">
-									<a href="javascript:void(0);" class="show-submenu-mega" style ="text-decoration: none;">Product</a>
+									<a href="javascript:void(0);" class="show-submenu-mega" style ="text-decoration: none;">Products</a>
 									<div class="menu-wrapper">
 										<div class="row small-gutters">
 											<div class="col-lg-4">
