--- a/Huimitu/src/public/css/custom.css
+++ b/Huimitu/src/public/css/custom.css
@@ -1,3 +1,30 @@
 /*============================================================================================*/
 /* Your custom styles below */
 /*============================================================================================*/
+
+
+#loadMore {
+    width: 200px;
+    color: #fff;
+    display: block;
+    text-align: center;
+    margin: 20px auto;
+    padding: 10px;
+    border-radius: 10px;
+    border: 1px solid transparent;
+    background-color: blue;
+    transition: .3s;
+  }
+
+#loadMore:hover {
+    color: blue;
+    background-color: #fff;
+    border: 1px solid blue;
+    text-decoration: none;
+}
+
+.noContent {
+    color: #000 !important;
+    background-color: transparent !important;
+    pointer-events: none;
+}
