--- a/Huimitu/src/resources/views/partials/header.hbs
+++ b/Huimitu/src/resources/views/partials/header.hbs
@@ -122,12 +122,14 @@
           </nav>
         </div>
         <div class="col-xl-6 col-lg-7 col-md-6 d-none d-md-block">
-          {{!-- <div class="custom-search-input">
-            <input type="text" placeholder="Search over 10.000 products"/>
-            <button type="submit">
-              <i class="header-icon_search_custom"></i>
-            </button>
-          </div> --}}
+          <form method="get">
+            <div class="custom-search-input">
+              <input type="text" placeholder="Search over 10.000 products" name="search" value=""/>
+              <button type="submit">
+                <i class="header-icon_search_custom"></i>
+              </button>
+            </div>
+          </form>
         </div>
         <div class="col-xl-3 col-lg-2 col-md-3">
           <ul class="top_tools">
