--- a/Huimitu/src/public/css/style.css
+++ b/Huimitu/src/public/css/style.css
@@ -6253,7 +6253,7 @@ a.social_bt.google:before {
 .clear:after, .pagination:after {
   clear: both;
 }
-
+.
 .pagination__wrapper {
   height: 50px;
   padding-top: 20px;
