--- a/Huimitu/src/resources/views/help.hbs
+++ b/Huimitu/src/resources/views/help.hbs
@@ -5,61 +5,54 @@
         <div class="page_header">
             <div class="breadcrumbs">
                 <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Category</a></li>
-                    <li>Page active</li>
+                    <li><a href="/">Home</a></li>
+                    <li><a href="/products">Products</a></li>
+                    <li>Help</li>
                 </ul>
             </div>
             <h1>Help and Support</h1>
         </div>
-        <!-- /page_header -->
-        <div class="search-input">
-            <input type="text" placeholder="Search question or article...">
-            <button type="submit"><i class="ti-search"></i></button>
-        </div>
-        <!-- /search-input -->
-
         <div class="row">
             <div class="col-lg-4 col-md-6">
                 <a class="box_topic" href="#0">
                     <i class="ti-wallet"></i>
                     <h3>Payments</h3>
-                    <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus.</p>
+                    <p>Các vấn đề về thanh toán</p>
                 </a>
             </div>
             <div class="col-lg-4 col-md-6">
                 <a class="box_topic" href="#0">
                     <i class="ti-user"></i>
                     <h3>Account</h3>
-                    <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus.</p>
+                    <p>Các vấn đề về tài khoản</p>
                 </a>
             </div>
             <div class="col-lg-4 col-md-6">
                 <a class="box_topic" href="#0">
                     <i class="ti-help"></i>
                     <h3>General help</h3>
-                    <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus.</p>
+                    <p>Trợ giúp chung</p>
                 </a>
             </div>
             <div class="col-lg-4 col-md-6">
                 <a class="box_topic" href="#0">
                     <i class="ti-truck"></i>
                     <h3>Shipping</h3>
-                    <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus.</p>
+                    <p>Các vấn đề về vận chuyển</p>
                 </a>
             </div>
             <div class="col-lg-4 col-md-6">
                 <a class="box_topic" href="#0">
                     <i class="ti-eraser"></i>
                     <h3>Cancellation</h3>
-                    <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus.</p>
+                    <p>Các vấn đề về hủy đơn</p>
                 </a>
             </div>
             <div class="col-lg-4 col-md-6">
                 <a class="box_topic" href="#0">
                     <i class="ti-comments"></i>
                     <h3>Reviews</h3>
-                    <p>Id mea congue dictas, nec et summo mazim impedit. Vim te audiam impetus.</p>
+                    <p>Các vấn đề về đánh giá</p>
                 </a>
             </div>
         </div>
@@ -71,20 +64,20 @@
             <h5>Popular Articles</h5>
             <div class="list_articles add_bottom_15 clearfix">
                 <ul>
-                    <li><a href="#0"><i class="ti-file"></i><strong>Account</strong> - Et dicit vidisse epicurei pri</a>
+                    <li><a href="#0"><i class="ti-file"></i><strong>Account</strong> -[Lỗi] Tại sao tài khoản Huimitu của tôi bị khóa/bị giới hạn?</a>
                     </li>
-                    <li><a href="#0"><i class="ti-file"></i><strong>Account</strong> - Ad sit virtute rationibus
-                            efficiantur</a></li>
-                    <li><a href="#0"><i class="ti-file"></i><strong>Refund</strong> - Partem vocibus omittam pri ne</a>
+                    <li><a href="#0"><i class="ti-file"></i><strong>General Help</strong> - [Thành viên mới] Làm sao để mua hàng / đặt hàng trên ứng dụng Huimitu?
+                            </a></li>
+                    <li><a href="#0"><i class="ti-file"></i><strong>Shipping</strong> - [Thành viên mới] Cách theo dõi tình trạng vận chuyển của đơn hàng?</a>
                     </li>
-                    <li><a href="#0"><i class="ti-file"></i><strong>Shipping</strong> - Case debet appareat duo cu</a>
+                    <li><a href="#0"><i class="ti-file"></i><strong>Payment</strong> - [Thành viên mới] Huimitu hiện đang có những phương thức thanh toán nào?</a>
                     </li>
-                    <li><a href="#0"><i class="ti-file"></i><strong>Payments</strong> - Impedit torquatos quo in</a>
+                    <li><a href="#0"><i class="ti-file"></i><strong>Payments</strong> - Hướng Dẫn Thanh Toán Bằng Thẻ ATM Nội Địa - Internet Banking</a>
                     </li>
-                    <li><a href="#0"><i class="ti-file"></i><strong>Warranty</strong> - Nec omnis alienum no</a></li>
-                    <li><a href="#0"><i class="ti-file"></i><strong>Refund</strong> - Quo eu soleat facilisi
+                    <li><a href="#0"><i class="ti-file"></i><strong>General Help</strong> - [Đơn hàng] Tại sao đơn hàng của tôi chưa cập nhật trạng thái?</a></li>
+                    <li><a href="#0"><i class="ti-file"></i><strong>Shipping</strong> - [Vận chuyển] Tổng hợp các câu hỏi về Phương thức vận chuyển
                             menandri</a></li>
-                    <li><a href="#0"><i class="ti-file"></i><strong>Reviews</strong> - Et dicit vidisse epicurei pri</a>
+                    <li><a href="#0"><i class="ti-file"></i><strong>General Help</strong> - CHÍNH SÁCH BẢO MẬT</a>
                     </li>
                 </ul>
             </div>
