--- a/Huimitu/src/resources/views/partials/header.hbs
+++ b/Huimitu/src/resources/views/partials/header.hbs
@@ -57,7 +57,7 @@
 												<ul>
 													<li><a href="/products/carts">Giỏ hàng</a></li>
 													<li><a href="#">Theo dõi đơn hàng của bạn</a></li>
-													<li><a href="help.html">Trung tâm trợ giúp</a></li>
+													<li><a href="/help">Trung tâm trợ giúp</a></li>
 												</ul>
 											</div>
 											<div class="col-lg-4 d-xl-block d-lg-block d-md-none d-sm-none d-none">
