--- a/Huimitu/src/resources/views/layouts/main.hbs
+++ b/Huimitu/src/resources/views/layouts/main.hbs
@@ -29,6 +29,7 @@
     <link href="/css/product_page.css" rel="stylesheet">
 	<link href="/css/listing.css" rel="stylesheet">
 	<link href="/css/faq.css" rel="stylesheet">
+	<link href="/css/about.css" rel="stylesheet">
     <!-- YOUR CUSTOM CSS -->
     <link href="/css/custom.css" rel="stylesheet">
 
