--- a/Huimitu/src/resources/views/layouts/main.hbs
+++ b/Huimitu/src/resources/views/layouts/main.hbs
@@ -30,6 +30,7 @@
 	<link href="/css/listing.css" rel="stylesheet">
 	<link href="/css/faq.css" rel="stylesheet">
 	<link href="/css/about.css" rel="stylesheet">
+	<link href="/css/contact.css" rel="stylesheet">
     <!-- YOUR CUSTOM CSS -->
     <link href="/css/custom.css" rel="stylesheet">
 
@@ -213,6 +214,7 @@
 	</div>
 	<!-- COMMON SCRIPTS -->
     <script src="/js/common_scripts.min.js"></script>
+	<script src="/js/footer-reveal.min.js"></script>
     <script src="/js/main.js"></script>
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 	{{!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> --}}
@@ -222,6 +224,7 @@
 	<script src="/js/carousel-home.min.js"></script>
 	<script src="/js/sticky_sidebar.min.js"></script>
 	<script src="/js/specific_listing.js"></script>
+	<script src="/js/footer-reveal.js"></script>
 	
 	{{{_sections.script}}}
 </body>
